Deprecated AndHow.instance(config) and AndHowConfig.build() * Add AndHow.setConfig(config) * Lots of test cleanup for fewer warnings * Cleaner tests using assertThrows instead of try/catch in a few places